[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbridge-gateway"
version = "1.2.0"
description = "Q-Bridge Gateway Agent — Self-hosted quantum hardware gateway for researchers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EUNMIN Park", email = "admin@swiftquantumnative.com"}
]
keywords = ["quantum", "computing", "gateway", "hardware", "swiftquantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
]

[project.scripts]
qbridge-gateway = "gateway_agent.cli:main"

[project.urls]
Homepage = "https://github.com/SwiftQuantum/gateway-agent"
Documentation = "https://swiftquantum-gateway.readthedocs.io"
Repository = "https://github.com/SwiftQuantum/gateway-agent"

[tool.setuptools.packages.find]
include = ["gateway_agent*"]
